k8s/removed/omegabrr/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 7441
      protocol: TCP
      targetPort: http
